--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2.7.7
       - name: Run cargo test
-        run: cargo test --locked
+        run: cargo test
