Update docs path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Paul Sanders <paul@paulsanders.dev>"]
 description = "Test helper to create a temporary directory"
-documentation = "https://github.com/sanders41/tmp-path"
+documentation = "https://docs.rs/tmp-path"
 homepage = "https://github.com/sanders41/tmp-path"
 repository = "https://github.com/sanders41/tmp-path"
 readme = "README.md"
